--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -29,6 +29,8 @@
 
 .timeline-heading{
     font-size: 28px;
+    width: 100%;
+    overflow-wrap: break-word;
 }
 
 .timeline-subheading{
@@ -39,7 +41,7 @@
 .timeline-description{
     font-size: 16px;
     font-style: italic;
-    width: 24em;
+    width: 75%;
 
 }
 
